# preprocess-haskell

./: LICENSE  README.md  TODO  default.nix  preprocess-haskell.cabal  shell.nix
src/Language/Haskell/: Preprocess.hs
src/Language/Haskell/Preprocess/: Examples.hs  Internal.hs  Macros.hs
